# AnthropicBlog2Notion

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: import.yml
prompts/: translation_prompt.md
rules/: classifier_rules.json
src/anthropic_blog2notion/: __init__.py  ai_client.py  classifier.py  config.py  crawler.py  markdown_utils.py  models.py  notion_client.py  pipeline.py
